# aoc2023

./: Cargo.toml  output.txt
input/: d5 copy.txt  d5.txt  d7 copy.txt  rep.txt
