[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
itertools = "0.12.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
pathfinding = "4.6.0"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["derive"] }
text2num = "2.1.4"
